master.css
@media only screen and (min-width: 768px) and (max-width: 992px)   {  
    #bootstrap-overrides
    {
        margin-top: 60px;
    }
}

@media only screen and (min-width: 992.001px) and (max-width: 1200px)   {  
    #bootstrap-overrides
    {
        margin-top: 60px;
    }

    #bo2
    {
        margin-top: 60px;
    }
}

#title{
    text-align:center;
    font-size: 36px;
    display: block;
    font-family: 'Bungee Shade';
    color: black;
    
}

#container {
    overflow: hidden;
}

body {
    padding-top: 130px;
    text-align: center;
    margin-bottom:60px;
}

#godown{
   height: 60px;
}

#navbar {
    font-family: 'Ubuntu', sans-serif;
}


.dropdown:hover>.dropdown-menu {
    display: block;
}

.dropdown-menu {
    font-style: oblique
}

#sections p {
    font-size: 15px;
    font-weight: 600;
    font-family: 'Ubuntu', sans-serif;
}

#sections {
    padding-top: 100px;
}

#historyContent .jumbotron{
    position: relative;
}

#historyContent #content {
    color: grey;
    text-align: left;
    font-family: 'Ubuntu', sans-serif;
}

#historyContent h2 {
    color: #539537;
    text-align: left;
    font-family: 'Ubuntu', sans-serif;
}

#servicesContent .jumbotron {
    position: relative;
    top: 100px;
    left: 80px;
}

#servicesContent #content {
    color: grey;
    text-align: left;
    font-family: 'Ubuntu', sans-serif;
}

#servicesContent h2 {
    color: #539537;
    text-align: center;
    font-family: 'Ubuntu', sans-serif;
}


.flex-container {
    display: flex;
}

.item:hover p {
    margin-top: 20px;
    font-size: 14px;
}

.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 50px;
    line-height: 50px;
    background-color: #f5f5f5;
}

#footText {
    float: left;
    position: absolute;
    font-family: 'Ubuntu', sans-serif;
}

#header-background {
    background-image: url("img/kente.jpg");
    width: 100%;
    height: 100%;
    position: absolute;
    padding-bottom: 80px;
}

#pictureText {
    text-align:center;
    font-size: 36px;
    display: block;
    font-family: 'Bungee Shade';
    color: white;
    padding-right: 50px;
    
}

#head {
    position: relative;
}


h1 {
    color:#132c86;
}

h2, h3, h4, h5, h6 {
    font-family: 'Ubuntu', sans-serif;
    color: #539537;
}

button {
}

.nav-pills>li>.btn.btn-link {
    display: inline-block;
    text-align: left;
    padding: 10px 15px;
    border-radius: 4px;
    outline: none;
    border: none;
}
.nav-pills>li>.btn.btn-link:hover,
.nav-pills>li>.btn.btn-link:focus {
    text-decoration: none;
    background-color: #eee;
}


#contact {
    text-align: left;
    font-family: 'Ubuntu', sans-serif;
    color: grey;
}

#contact h1 {
    color:#132c86;
}

#contact h2 {
    color: #539537;
}

#involvedheader {
    text-align: center;
    font-family: 'Ubuntu', sans-serif;
    color: grey;
    
}

#involvedheader h1 {
    color:#132c86;
}

#involvedheader h2 {
    color: #539537;
}

#staff {
    text-align: left;
    font-family: 'Ubuntu', sans-serif;
    color: grey;
}

#staff h1 {
    color:#132c86;
}

#staff h2 {
    color: #539537;
}

.carousel {
    width: auto;
    height:auto;
    overflow: hidden;
} 

#index {
    text-align: center;
    font-family: 'Ubuntu', sans-serif;
    color: grey;
}

#index h1 {
    color:#132c86;
}

#index h2 {
    color: #539537;
}

#titles2 {
    font-family: 'Ubuntu', sans-serif;
}

.resource{
  font-family: 'Ubuntu', sans-serif;
  text-align: center;
  color: black;
  padding:  10px 0px 10px 0px;
  border:solid 1px #539537;
  border-radius: 5px;
  margin: 10px 80px 10px 80px;
}

.homebutton{
    font-family: 'Ubuntu', sans-serif;
    text-align: center;
    color: black;
    padding:  10px 0px 10px 0px;
    border:solid 1px #539537;
    border-radius: 5px;
    margin: 10px 80px 10px 80px;
  }

